--- a/layout/item.xml
+++ b/layout/item.xml
@@ -9,5 +9,5 @@
 <p><a href="{{ site_url }}/{{ blog }}/{{ slug }}/">Read More</a></p>
 ]]>
 </description>
-<pubDate>{{ date }}</pubDate>
+<pubDate>{{ date_rfc_2822 }}</pubDate>
 </item>
